# Instadective

./: README.md  pyproject.toml  requirements.txt
instadective/: cli.py  core.py
